kubernetes/manifests/tibia-statistics/tibiadata-api-go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tibiadata-api-go
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tibiadata-api-go
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tibiadata-api-go
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 100
        runAsGroup: 100
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: gh-docker-pat
      containers:
        - name: tibiadata-api-go
          image: ghcr.io/tibiadata/tibiadata-api-go:latest
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 512Mi
