kubernetes/manifests/tibia-statistics/tibiadata-api-go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tibiadata-api-go
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: tibiadata-api-go
