kubernetes/manifests/tibia-statistics/tibia-statistics-egress-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tibia-statistics-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tibia-statistics
  egress:
    - toFQDNs:
        - matchName: "mongodb.nullservers.com"
